--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "NPM_CONFIG_PRODUCTION=false npm install --pref frontend && npm run build --prefix frontend"
+    "build": " npm install --pref frontend && npm run build --prefix frontend"
   },
   "author": "Basil Dayigil",
   "license": "ISC",
